# lotus-experiment

./: .gitignore  .gitmodules  data_loader.py  data_loader_task2.py  experiment_utils.py  experiment_utils_lotus.py  experiment_utils_palimpzest.py  hit_rate_throughput_script.py  launch.json  lotus_logger.py  main.py  prepare_data.py  pyproject.toml  retrieval.py  run_comparison.py  run_lotus_fever.py  run_no_vdb.py  run_pz_fever.py  run_task2_sweep.py  submit_fever.sh  universal_prompts.py
parse-answer-errors/: error-1772833826.3935263.txt  error-1772833826.9769113.txt  error-1772833830.691217.txt  error-1772833830.9900994.txt  error-1772833834.455798.txt  error-1772833834.4841282.txt  error-1772833834.7958689.txt  error-1772833834.9522703.txt  error-1772833836.1831982.txt  error-1772833836.2201796.txt  error-1772833837.2325163.txt  error-1772833838.86089.txt  error-1772833840.2841196.txt  error-1772833840.570894.txt  error-1772833841.8790472.txt  error-1772833843.8552647.txt  error-1772833844.984244.txt  error-1772833846.503048.txt  error-1772833847.24696.txt  error-1772833848.6642663.txt  error-1772833849.9410853.txt  error-1772833850.2953072.txt  error-1772833852.4787047.txt  error-1772833853.6229458.txt  error-1772833855.1620224.txt  error-1772833855.2215624.txt  error-1772833858.3509488.txt  error-1772833859.165601.txt  error-1772833861.7938895.txt  error-1772833862.5540226.txt  error-1772833862.5543141.txt  error-1772833863.009672.txt  error-1772833863.5552773.txt  error-1772833864.8108292.txt  error-1772833865.227753.txt  error-1772833865.5421047.txt  (+480 more)
(+43 files in other folders)
